--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="button-title-hero" type="button" data-modal-open>Заказать услугу</button>
+          <!-- modal -->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button class="modal-btn" data-modal-close>
@@ -77,6 +78,7 @@
                   <use href="./images/icons.svg#close"></use>
                 </svg>
               </button>
+              <!-- form -->
             </div>
           </div>
         </div>
