--- a/index.html
+++ b/index.html
@@ -79,6 +79,60 @@
                 </svg>
               </button>
               <!-- form -->
+              <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+              <form class="form">
+                <label class="form-label">
+                  <span class="form-name">Имя</span>
+                  <span class="form-input-container">
+                    <input class="form-input" type="text" name="name" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#person-form"></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="form-label">
+                  <span class="form-name">Телефон</span>
+                  <span class="form-input-container">
+                    <input class="form-input" type="text" name="tel" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#phone-form"></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="form-label">
+                  <span class="form-name">Почта</span>
+                  <span class="form-input-container">
+                    <input class="form-input" type="text" name="email" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#email-form"></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="form-label comments">
+                  <span class="form-name">Комментарий</span>
+                  <span class="form-input-container">
+                    <textarea
+                      class="form-comments"
+                      name="commets"
+                      cols="30"
+                      rows="10"
+                      placeholder="Введите текст"
+                    ></textarea>
+                  </span>
+                </label>
+                <label class="form-checkbox">
+                  <span class="checkbox-container">
+                    <input class="checkbox" type="checkbox" name="checkbox" />
+                  </span>
+                  <span class="checkbox-text">
+                    Соглашаюсь с рассылкой и принимаю
+                    <a class="checkbox-text-link" href target="_blank" rel="noopener noreferrer"
+                      >Условия договора</a
+                    >
+                  </span>
+                </label>
+                <button class="form-button" type="submit">Отправить</button>
+              </form>
             </div>
           </div>
         </div>
