--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.instagram.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка instagram"
@@ -242,7 +242,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://twitter.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка twitter"
@@ -255,7 +255,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.facebook.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка facebook"
@@ -268,7 +268,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.linkedin.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка linkedin"
@@ -290,7 +290,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.instagram.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка instagram"
@@ -303,10 +303,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://twitter.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка twitter"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
@@ -316,10 +316,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.facebook.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка facebook"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -329,10 +329,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.linkedin.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка linkedin"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -351,7 +351,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.instagram.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка instagram"
@@ -364,10 +364,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://twitter.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка twitter"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
@@ -377,10 +377,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.facebook.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка facebook"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -390,10 +390,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.linkedin.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка linkedin"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -412,7 +412,7 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.instagram.com/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="иконка instagram"
@@ -425,10 +425,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://twitter.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка twitter"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
@@ -438,10 +438,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.facebook.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка facebook"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
@@ -451,10 +451,10 @@
                   <li class="social-team">
                     <a
                       class="social-link"
-                      href=""
+                      href="https://www.linkedin.com/"
                       target="_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка instagram"
+                      aria-label="иконка linkedin"
                     >
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -545,7 +545,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.instagram.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка instagram"
@@ -558,7 +558,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://twitter.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка twitter"
@@ -571,7 +571,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.facebook.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка facebook"
@@ -584,7 +584,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.linkedin.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка linkedin"
@@ -595,6 +595,22 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe">
+          <b class="text-subscribe">Подпишитесь на рассылку</b>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input class="subscribe-input" type="email" name="email" placeholder="E-mail" />
+            </label>
+            <button class="btn-subscribe" type="submit">
+              <span class="footer-btn-subscribe"
+                >Подписаться
+                <svg class="icon-subscribe" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
