--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.instagram.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка instagram"
@@ -280,7 +280,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://twitter.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка twitter"
@@ -293,7 +293,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.facebook.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка facebook"
@@ -306,7 +306,7 @@
             <li class="social-list">
               <a
                 class="social-link-footer"
-                href=""
+                href="https://www.linkedin.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="иконка linkedin"
@@ -317,6 +317,22 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe">
+          <b class="text-subscribe">Подпишитесь на рассылку</b>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input class="subscribe-input" type="email" name="email" placeholder="E-mail" />
+            </label>
+            <button class="btn-subscribe" type="submit">
+              <span class="footer-btn-subscribe"
+                >Подписаться
+                <svg class="icon-subscribe" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
