--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
                   </span>
                 </label>
                 <label class="form-checkbox">
-                  <span class="checkbox-container">
-                    <input class="checkbox" type="checkbox" name="checkbox" />
-                  </span>
+                  <input class="checkbox visually-hidden" type="checkbox" name="checkbox" />
+                  <span class="custom-checkbox">
+                    <svg class="checkbox-icon" width="16px" height="15px">
+                      <use href="./images/icons.svg#checkbox-icon"></use></svg
+                  ></span>
                   <span class="checkbox-text">
                     Соглашаюсь с рассылкой и принимаю
                     <a class="checkbox-text-link" href target="_blank" rel="noopener noreferrer"
