--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                   </span>
                 </label>
                 <label class="form-checkbox">
-                  <input class="checkbox visually-hidden" type="checkbox" name="checkbox" />
-                  <span class="custom-checkbox">
+                  <input class="checkbox visually-hidden" type="checkbox" name="checkbox" tabindex="-1"/>
+                  <span class="custom-checkbox" tabindex="0">
                     <svg class="checkbox-icon" width="16px" height="15px">
                       <use href="./images/icons.svg#checkbox-icon"></use></svg
                   ></span>
