--- a/index.html
+++ b/index.html
@@ -114,14 +114,19 @@
                   </span>
                 </label>
                 <label class="form-checkbox">
-                  <input class="checkbox visually-hidden" type="checkbox" name="checkbox" tabindex="-1"/>
+                  <input
+                    class="checkbox visually-hidden"
+                    type="checkbox"
+                    name="checkbox"
+                    tabindex="-1"
+                  />
                   <span class="custom-checkbox" tabindex="0">
                     <svg class="checkbox-icon" width="16px" height="15px">
                       <use href="./images/icons.svg#checkbox-icon"></use></svg
                   ></span>
                   <span class="checkbox-text">
                     Соглашаюсь с рассылкой и принимаю
-                    <a class="checkbox-text-link" href target="_blank" rel="noopener noreferrer"
+                    <a class="checkbox-text-link" href="" target="_blank" rel="noopener noreferrer"
                       >Условия договора</a
                     >
                   </span>
