--- a/index.html
+++ b/index.html
@@ -25,30 +25,34 @@
   </head>
   <body>
     <!-- header -->
-    <header class="page-header">
-      <div class="container header-container">
-        <a class="logo" lang="en" href="./index.html">Web<span class="logo-black">Studio</span></a>
+    <header class="header">
+      <div class="container header__container">
+        <a class="logo" lang="en" href="./index.html"
+          >Web<span class="logo__text logo__text--black">Studio</span></a
+        >
         <!-- nav -->
-        <nav>
-          <ul class="site-navigation">
-            <li class="list-link"><a class="nav-link current" href="">Студия</a></li>
-            <li class="list-link"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-            <li class="list-link"><a class="nav-link" href="">Контакты</a></li>
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item"><a class="navigation__link current" href="">Студия</a></li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
           </ul>
         </nav>
         <!-- contacts -->
-        <ul class="header-contacts-list">
-          <li class="contacts-list">
-            <a class="mail-header" href="mailto:nfo@devstudio.com">
-              <svg class="contacts-icon" width="16" height="12">
+        <ul class="header-contacts">
+          <li class="header-contacts__item">
+            <a class="header-contacts__mail" href="mailto:nfo@devstudio.com">
+              <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="contacts-list">
-            <a class="phone-header" href="tel:0961111111">
-              <svg class="contacts-icon" width="10" height="16">
+          <li class="header-contacts__item">
+            <a class="header-contacts__phone" href="tel:0961111111">
+              <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               0961111111</a
