--- a/portfolio.html
+++ b/portfolio.html
@@ -24,28 +24,37 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
-      <div class="container header-container">
-        <a class="logo" lang="en" href="./index.html">Web<span class="logo-black">Studio</span></a>
-        <nav>
-          <ul class="site-navigation">
-            <li class="list-link"><a class="nav-link" href="./index.html">Студия</a></li>
-            <li class="list-link"><a class="nav-link current" href="">Портфолио</a></li>
-            <li class="list-link"><a class="nav-link" href="">Контакты</a></li>
+    <!-- header -->
+    <header class="header">
+      <div class="container header__container">
+        <a class="logo" lang="en" href="./index.html"
+          >Web<span class="logo__text logo__text--black">Studio</span></a
+        >
+        <!-- nav -->
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="./index.html">Студия</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link current" href="">Портфолио</a>
+            </li>
+            <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="header-contacts-list">
-          <li class="contacts-list">
-            <a class="mail-header" href="mailto:nfo@devstudio.com">
-              <svg class="contacts-icon" width="16" height="12">
+        <!-- contacts -->
+        <ul class="header-contacts">
+          <li class="header-contacts__item">
+            <a class="header-contacts__mail" href="mailto:nfo@devstudio.com">
+              <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="contacts-list">
-            <a class="phone-header" href="tel:0961111111">
-              <svg class="contacts-icon" width="10" height="16">
+          <li class="header-contacts__item">
+            <a class="header-contacts__phone" href="tel:0961111111">
+              <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               0961111111</a
@@ -54,10 +63,12 @@
         </ul>
       </div>
     </header>
+    <!-- main -->
     <main>
       <h1 class="slogan visually-hidden">Наши работы</h1>
       <section class="filter section">
         <div class="container">
+          <!-- button -->
           <ul class="list-button">
             <li class="list-btn">
               <button class="btn" type="button">Все</button>
@@ -75,6 +86,7 @@
               <button class="btn" type="button">Маркетинг</button>
             </li>
           </ul>
+          <!-- cards -->
           <ul class="list-card">
             <li class="card">
               <a class="link-card" href="">
@@ -242,6 +254,7 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <div class="container social-container">
         <!-- address -->
@@ -315,6 +328,7 @@
             </li>
           </ul>
         </div>
+        <!-- subscribe -->
         <div class="subscribe">
           <b class="text-subscribe">Подпишитесь на рассылку</b>
           <form class="subscribe-form">
