--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- nav -->
         <nav class="navigation">
           <ul class="navigation__list">
-            <li class="navigation__item"><a class="navigation__link current" href="">Студия</a></li>
+            <li class="navigation__item"><a class="navigation__link navigation__link--current" href="">Студия</a></li>
             <li class="navigation__item">
               <a class="navigation__link" href="./portfolio.html">Портфолио</a>
             </li>
