--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
               <a class="navigation__link" href="./index.html">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link current" href="">Портфолио</a>
+              <a class="navigation__link navigation__link--current" href="">Портфолио</a>
             </li>
             <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
           </ul>
