сделал 3 секции по БЭМ

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
     <!-- header -->
     <header class="header">
       <div class="container header__container">
-        <a class="logo" lang="en" href="./index.html"
+        <a class="logo link" lang="en" href="./index.html"
           >Web<span class="logo__text logo__text--black">Studio</span></a
         >
         <!-- nav -->
         <nav class="navigation">
-          <ul class="navigation__list">
+          <ul class="navigation__list list">
             <li class="navigation__item">
-              <a class="navigation__link navigation__link--current" href="">Студия</a>
+              <a class="navigation__link navigation__link--current link" href="">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="./portfolio.html">Портфолио</a>
+              <a class="navigation__link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
+            <li class="navigation__item"><a class="navigation__link link" href="">Контакты</a></li>
           </ul>
         </nav>
         <!-- contacts -->
-        <ul class="header-contacts">
+        <ul class="header-contacts list">
           <li class="header-contacts__item">
-            <a class="header-contacts__mail" href="mailto:nfo@devstudio.com">
+            <a class="header-contacts__mail link" href="mailto:nfo@devstudio.com">
               <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
@@ -53,7 +53,7 @@
             >
           </li>
           <li class="header-contacts__item">
-            <a class="header-contacts__phone" href="tel:0961111111">
+            <a class="header-contacts__phone link" href="tel:0961111111">
               <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
@@ -144,51 +144,51 @@
         </div>
       </section>
       <!-- section benefits -->
-      <section class="section-benefits section">
-        <div class="container benefits-container">
-          <h2 class="slogan visually-hidden">Наши особенности</h2>
-          <ul class="list-desk">
-            <li class="list-item">
-              <div class="icon-benefits">
+      <section class="benefits-section section">
+        <div class="benefits-container container">
+          <h2 class="benefits__slogan visually-hidden">Наши особенности</h2>
+          <ul class="benefits__list list">
+            <li class="benefits__item">
+              <div class="benefits__icon">
                 <svg class="icons" width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Внимание к деталям</h3>
-              <p class="text-subtitle">
+              <h3 class="benefits__subtitle">Внимание к деталям</h3>
+              <p class="benefits__text-subtitle">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="list-item">
-              <div class="icon-benefits">
+            <li class="benefits__item">
+              <div class="benefits__icon">
                 <svg class="icons" width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Пунктуальность</h3>
-              <p class="text-subtitle">
+              <h3 class="benefits__subtitle">Пунктуальность</h3>
+              <p class="benefits__text-subtitle">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="list-item">
-              <div class="icon-benefits">
+            <li class="benefits__item">
+              <div class="benefits__icon">
                 <svg class="icons" width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Планирование</h3>
-              <p class="text-subtitle">
+              <h3 class="benefits__subtitle">Планирование</h3>
+              <p class="benefits__text-subtitle">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="list-item">
-              <div class="icon-benefits">
+            <li class="benefits__item">
+              <div class="benefits__icon">
                 <svg class="icons" width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Современные технологии</h3>
-              <p class="text-subtitle">
+              <h3 class="benefits__subtitle">Современные технологии</h3>
+              <p class="benefits__text-subtitle">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -196,21 +196,21 @@
         </div>
       </section>
       <!-- section gallery -->
-      <section class="section-img section">
-        <div class="container">
-          <h2 class="subtitle-img">Чем мы занимаемся</h2>
-          <ul class="list-gallery">
-            <li class="item-gallery">
+      <section class="gallery-section section">
+        <div class="gallery-container container">
+          <h2 class="gallery__subtitle">Чем мы занимаемся</h2>
+          <ul class="gallery__list list">
+            <li class="gallery__item">
               <img src="./images/keyboard.jpg" alt="" width="370" />
-              <p class="text-gallery">Десктопные приложения</p>
+              <p class="gallery__text">Десктопные приложения</p>
             </li>
-            <li class="item-gallery">
+            <li class="gallery__item">
               <img src="./images/phone.jpg" alt="" width="370" />
-              <p class="text-gallery">Мобильные приложения</p>
+              <p class="gallery__text">Мобильные приложения</p>
             </li>
-            <li class="item-gallery">
+            <li class="gallery__item">
               <img src="./images/tablet.jpg" alt="" width="370" />
-              <p class="text-gallery">Дизайнерские решения</p>
+              <p class="gallery__text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -219,13 +219,13 @@
       <section class="section-team section">
         <div class="container">
           <h2 class="subtitle-team">Наша команда</h2>
-          <ul class="list-team">
+          <ul class="list-team list">
             <li class="card-team">
               <img class="team-image" src="./images/igor.jpg" alt="" width="270" />
               <div class="command-description">
                 <h3 class="subtitle-name">Игорь Демьяненко</h3>
                 <p class="text-team" lang="en">Product Designer</p>
-                <ul class="social">
+                <ul class="social list">
                   <li class="social-team">
                     <a
                       class="social-link"
@@ -286,7 +286,7 @@
               <div class="command-description">
                 <h3 class="subtitle-name">Ольга Репина</h3>
                 <p class="text-team" lang="en">Frontend Developer</p>
-                <ul class="social">
+                <ul class="social list">
                   <li class="social-team">
                     <a
                       class="social-link"
@@ -347,7 +347,7 @@
               <div class="command-description">
                 <h3 class="subtitle-name">Николай Тарасов</h3>
                 <p class="text-team" lang="en">Marketing</p>
-                <ul class="social">
+                <ul class="social list">
                   <li class="social-team">
                     <a
                       class="social-link"
@@ -408,7 +408,7 @@
               <div class="command-description">
                 <h3 class="subtitle-name">Михаил Ермаков</h3>
                 <p class="text-team" lang="en">UI Designer</p>
-                <ul class="social">
+                <ul class="social list">
                   <li class="social-team">
                     <a
                       class="social-link"
@@ -471,7 +471,7 @@
       <section class="clients">
         <div class="container">
           <h2 class="subtitle-clients">Постоянные клиенты</h2>
-          <ul class="list-clients">
+          <ul class="list-clients list">
             <li class="client">
               <a class="link-client" href="">
                 <svg class="icon-client" width="106" height="60">
@@ -527,7 +527,7 @@
             >Web<span class="logo-white">Studio</span></a
           >
           <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="footer-contacts-list">
+          <ul class="footer-contacts-list list">
             <li class="li-mail">
               <a class="mail-footer" href="mailto:nfo@devstudio.com">info@devstudio.com</a>
             </li>
@@ -537,7 +537,7 @@
         <!-- Join-->
         <div class="footer-socials">
           <h3 class="text-footer">присоединяйтесь</h3>
-          <ul class="social">
+          <ul class="social list">
             <li class="social-list">
               <a
                 class="social-link-footer"
