--- a/portfolio.html
+++ b/portfolio.html
@@ -27,25 +27,25 @@
     <!-- header -->
     <header class="header">
       <div class="container header__container">
-        <a class="logo" lang="en" href="./index.html"
+        <a class="logo link" lang="en" href="./index.html"
           >Web<span class="logo__text logo__text--black">Studio</span></a
         >
         <!-- nav -->
         <nav class="navigation">
-          <ul class="navigation__list">
+          <ul class="navigation__list list">
             <li class="navigation__item">
-              <a class="navigation__link" href="./index.html">Студия</a>
+              <a class="navigation__link link" href="./index.html">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link navigation__link--current" href="">Портфолио</a>
+              <a class="navigation__link navigation__link--current link" href="">Портфолио</a>
             </li>
-            <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
+            <li class="navigation__item"><a class="navigation__link link" href="">Контакты</a></li>
           </ul>
         </nav>
         <!-- contacts -->
-        <ul class="header-contacts">
+        <ul class="header-contacts list">
           <li class="header-contacts__item">
-            <a class="header-contacts__mail" href="mailto:nfo@devstudio.com">
+            <a class="header-contacts__mail link" href="mailto:nfo@devstudio.com">
               <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
@@ -53,7 +53,7 @@
             >
           </li>
           <li class="header-contacts__item">
-            <a class="header-contacts__phone" href="tel:0961111111">
+            <a class="header-contacts__phone link" href="tel:0961111111">
               <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
@@ -69,7 +69,7 @@
       <section class="filter section">
         <div class="container">
           <!-- button -->
-          <ul class="list-button">
+          <ul class="list-button list">
             <li class="list-btn">
               <button class="btn" type="button">Все</button>
             </li>
@@ -87,7 +87,7 @@
             </li>
           </ul>
           <!-- cards -->
-          <ul class="list-card">
+          <ul class="list-card list">
             <li class="card">
               <a class="link-card" href="">
                 <div class="card-overlay">
@@ -263,7 +263,7 @@
             >Web<span class="logo-white">Studio</span></a
           >
           <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="footer-contacts-list">
+          <ul class="footer-contacts-list list">
             <li class="li-mail">
               <a class="mail-footer" href="mailto:nfo@devstudio.com">info@devstudio.com</a>
             </li>
@@ -273,7 +273,7 @@
         <!-- Join-->
         <div class="footer-socials">
           <h3 class="text-footer">присоединяйтесь</h3>
-          <ul class="social">
+          <ul class="social list">
             <li class="social-list">
               <a
                 class="social-link-footer"
