--- a/index.html
+++ b/index.html
@@ -610,6 +610,13 @@
         </div>
       </div>
     </footer>
+    <!-- scroll up -->
+    <a href="#" title="вернуться к началу"
+      ><button class="scroll-up" type="button">
+        <svg class="scroll-icon" width="25" height="25">
+          <use href="./images/icons.svg#icon-up"></use>
+        </svg></button
+    ></a>
     <!-- modal.js -->
     <script src="./js/modal.js"></script>
   </body>
