--- a/portfolio.html
+++ b/portfolio.html
@@ -347,5 +347,12 @@
         </div>
       </div>
     </footer>
+    <!-- scroll up -->
+    <a href="#" title="вернуться к началу"
+      ><button class="scroll-up" type="button">
+        <svg class="scroll-icon" width="25" height="25">
+          <use href="./images/icons.svg#icon-up"></use>
+        </svg></button
+    ></a>
   </body>
 </html>
